Added reports and some small form tweaks